--- a/scss/components/_list.scss
+++ b/scss/components/_list.scss
@@ -23,6 +23,7 @@
   display: none;
   padding-left: rem(10);
   margin: rem(15) 0 rem(15) rem(10);
+  overflow: hidden;
 }
 
 .list-link {
